changed: export button and export dialog styling and text, closes https://github.com/kobotoolbox/enketo-express/issues/372

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -16,11 +16,11 @@
       "error": {
         "filecreatedmsg": "Nevertheless, an incomplete export file was still created.",
         "heading": "Export Error",
-        "linknotcreated": "Failed to create an export link. Are you online?",
-        "msg": "Errors occurred during creating of the record export file. Errors: __errors__"
+        "linknotcreated": "Failed to create an export link for unsubmitted records. Are you online?",
+        "msg": "Errors occurred during creating of the record export file for unsubmitted records. Errors: __errors__"
       },
       "success": {
-        "heading": "",
+        "heading": "Export Created",
         "msg": "Export file created for all unsubmitted records belonging to this form."
       }
     },
