added: Persian translation

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -237,6 +237,7 @@
     "el": "Greek",
     "en": "English",
     "es": "Spanish",
+    "fa": "Persian",
     "fr": "French",
     "he": "Hebrew",
     "hi": "Hindi",
