--- a/locales/nl/translation.json
+++ b/locales/nl/translation.json
@@ -3,6 +3,24 @@
         "flushdb": "Verwijder Opslag"
     },
     "alert": {
+        "addtohomescreen": {
+            "androidchrome": {
+                "msg": "Om dit formulier toe te voegen aan uw beginscherm, klikt u op het pictogram browserinstellingen __image1__ en selecteer: 'Zet in beginscherm'."
+            },
+            "androidfirefox": {
+                "msg": [
+                    "Om dit formulier toe te voegen aan uw beginscherm:",
+                    "1. Voeg deze pagina toe aan uw Firefox bookmarks door te klikken op het pictogram voor instellingen __image1__ en vervolgens het ster pictogram __image2__.",
+                    "2. Open uw bookmarks door een nieuwe pagina te openen en te klikken op het tabblad Bladwijzers.",
+                    "3. Klik-en-houd uw survey tot een pop-up menu verschijnt.",
+                    "4. Selecteer 'Zet in beginscherm'."
+                ]
+            },
+            "heading": "Zet in beginscherm",
+            "iossafari": {
+                "msg": "Om dit formulier toe te voegen aan uw beginscherm, klikt u op het pictogram Delen __image1__ in de rechter bovenhoek van uw browser, en selecteer: '+ zet in beginscherm."
+            }
+        },
         "appupdated": {
             "heading": "App Bijgewerkt!",
             "msg": "Een nieuwe versie van deze applicatie is gedownload. Vernieuw deze pagina om de bijgewerkte versie te laden."
@@ -10,6 +28,19 @@
         "default": {
             "button": "Sluit",
             "heading": "Let op"
+        },
+        "export": {
+            "alternativequestion": "alternatief downloaden - online",
+            "error": {
+                "filecreatedmsg": "Toch werd een onvolledig exportbestand gemaakt.",
+                "heading": "Export Fout",
+                "linknotcreated": "Niet gelukt een export link voor niet-verzonden records te creeren. Bent u online?",
+                "msg": "Fouten opgetreden tijdens het maken van het exportbestand voor unsubmitted records. Fouten: __errors__"
+            },
+            "success": {
+                "heading": "Export Gemaakt",
+                "msg": "Exportbestand gemaakt voor alle niet-verzonden records die behoren by deze survey."
+            }
         },
         "formupdated": {
             "heading": "Enquete Bijgewerkt!",
