changed: updated Dutch translation

--- a/locales/nl/translation.json
+++ b/locales/nl/translation.json
@@ -237,6 +237,7 @@
         "el": "Grieks",
         "en": "Engels",
         "es": "Spaans",
+        "fa": "Perzisch",
         "fr": "Frans",
         "he": "Hebreeuws",
         "hi": "Hindi",
