changed: updated English strings

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -250,7 +250,8 @@
     "supported": "Languages supported: ",
     "sw": "Swahili",
     "th": "Thai",
-    "vi": "Vietnamese"
+    "vi": "Vietnamese",
+    "zh": "Chinese"
   },
   "page": {
     "modernbrowsers": {
