fixed: form UI strings now also translatable including the default 'this is required message', closes https://github.com/kobotoolbox/enketo-express/issues/142

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -226,6 +226,17 @@
       "btn": "Validate"
     }
   },
+  "geopicker": {
+    "accuracy": "accuracy (m)",
+    "altitude": "altitude (m)",
+    "closepolygon": "close polygon",
+    "kmlcoords": "KML coordinates",
+    "kmlpaste": "paste KML coordinates here",
+    "latitude": "latitude (x.y °)",
+    "longitude": "longitude (x.y °)",
+    "points": "points",
+    "searchPlaceholder": "search for place or address"
+  },
   "here": "here",
   "home": {
     "msg": "__appTitle__ is running! Please access Enketo forms from your __serverName__ installation."
@@ -289,6 +300,10 @@
     "norecords": "no records queued",
     "title": "Queue",
     "upload": "Upload"
+  },
+  "selectpicker": {
+    "noneselected": "none selected",
+    "numberselected": "__number__ selected"
   },
   "store": {
     "error": {
