changed: updated Persian translation

--- a/locales/fa/translation.json
+++ b/locales/fa/translation.json
@@ -131,7 +131,7 @@
             "posButton": "تأیید"
         },
         "deleteall": {
-            "heading": "مشکل جدی!",
+            "heading": "هشدار جدی!",
             "msg": [
                 "این کار همهٔ داده‌های موجود در صف و تمام فرم‌های ذخیره‌شده در حافظهٔ مرورگر را پاک می‌کند. داده‌ها غیر قابل بازگردانی خواهند شد. این کار را تنها به عنوان آخرین چاره در زمانی که به‌نظر می‌رسد حافظهٔ مرورگر دارای مشکل است انجام دهید.",
                 "ابتدا تمام تب های مرورگر اِنکتو را به غیر از تب فعلی ببندید.",
@@ -285,7 +285,7 @@
         "msg1": "رکوردها در مرورگر شما تا زمانی که آن‌ها را به سرور ارسال کنید، ذخیره می‌شوند (حتی اگر رایانهٔ خود را خاموش کنید یا اتصال اینترنت شما قطع شود).",
         "msg2": "رکوردهای موجود در صف، به‌جز آن‌هایی که به عنوان پیش‌نویس __icon__ علامت‌گذاری شده‌اند، هنگامی که صفحه باز باشد و اتصال اینترنت نیز موجود باشد، به صورت خودکار در پس‌زمینه هر از 5 دقیقه یک‌بار به سرور ارسال می‌شوند.",
         "msg2-nodraft": "رکوردهای موجود در صف، هنگامی که صفحه باز باشد و اتصال اینترنت نیز موجود باشد، به صورت خودکار در پس‌زمینه هر از 5 دقیقه یک‌بار به سرور ارسال می‌شوند.",
-        "msg3": "برای ارسال دستی، دکمه ارسال به سرور را کلیک کنید.",
+        "msg3": "برای ارسال دستی، دکمهٔ ارسال به سرور را کلیک کنید.",
         "norecords": "رکوردی در صف موجود نیست",
         "title": "صف",
         "upload": "ارسال به سرور"
