--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -191,7 +191,7 @@
     "code": "Error Code: __code__",
     "dataloadfailed": "Failed to load data from __url__",
     "econnrefused": "Could not connect with Server",
-    "encryptionnotsupported": "This form requires local encryption of records. Unfortunately this not yet supported. We recommend using ODK Collect for data collection with this form.",
+    "encryptionnotsupported": "This form requires local encryption of records. Unfortunately this is not yet supported. We recommend using ODK Collect for data collection with this form.",
     "instancenotfound": "Record not present. It may have expired.",
     "invalidediturl": "Not a valid edit URL",
     "loadfailed": "Failed to load __resource__",
