changed: updated Czech, German and Slovak

--- a/locales/cs/translation.json
+++ b/locales/cs/translation.json
@@ -328,7 +328,7 @@
     "version": "verze:",
     "widget": {
         "comment": {
-            "update": "Update"
+            "update": "Aktualizovat"
         }
     }
 }
