fixed: Finnish not shown on front page

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -258,6 +258,7 @@
     "en": "English",
     "es": "Spanish",
     "fa": "Persian",
+    "fi": "Finnish",
     "fr": "French",
     "he": "Hebrew",
     "hi": "Hindi",
