--- a/locales/nl/translation.json
+++ b/locales/nl/translation.json
@@ -258,6 +258,7 @@
         "en": "Engels",
         "es": "Spaans",
         "fa": "Perzisch",
+        "fi": "Fins",
         "fr": "Frans",
         "he": "Hebreeuws",
         "hi": "Hindi",
