changed: show ‘Me’ as user in new queries

--- a/locales/en/translation-additions.json
+++ b/locales/en/translation-additions.json
@@ -5,7 +5,8 @@
             "closeQueryText": "Close Query",
             "emptyHistoryText": "No History",
             "historyText": "History",
-            "notifyText": "Email?"
+            "notifyText": "Email?",
+            "me": "Me"
         }
     }
 }
