changed: updated Persian translation

--- a/locales/fa/translation.json
+++ b/locales/fa/translation.json
@@ -23,7 +23,7 @@
         },
         "appupdated": {
             "heading": "برنامه به روز شد!",
-            "msg": "نگارش جدید برنامه دانلود شده‌است. برای بارگذاری نگارش جدید، صفحه را به‌روزرسانی کنید."
+            "msg": "نگارش جدید برنامه دانلود شده‌است. برای بارگذاری نگارش جدید، صفحه را بازنشانی کنید."
         },
         "default": {
             "button": "بستن",
@@ -44,7 +44,7 @@
         },
         "formupdated": {
             "heading": "فرم به‌روزرسانی شد!",
-            "msg": "نگارش جدید فرم دانلود شده است. برای بارگذاری نگارش جدید، صفحه را به‌روزرسانی کنید."
+            "msg": "نگارش جدید فرم دانلود شده است. برای بارگذاری نگارش جدید، صفحه را بازنشانی کنید."
         },
         "loaderror": {
             "editadvice": "توصیه می‌شود این رکورد را تا قبل از اصلاح شدن، ویرایش نکنید.",
@@ -107,7 +107,8 @@
         },
         "thanks": {
             "heading": "با تشکر از مشارکت شما!",
-            "msg": "اکنون می‌توانید این پنجره را ببندید."
+            "msg": "اکنون می‌توانید این پنجره را ببندید.",
+            "msgTaken": "شما قبلاً این پرسشنامه را پر کرده‌اید."
         },
         "validationerror": {
             "msg": "فرم دارای خطا می‌باشد. لطفاً فیلدهایی که با رنگ قرمز مشخص شده‌اند را بررسی کنید."
@@ -239,7 +240,7 @@
         "altitude": "ارتفاع (متر)",
         "closepolygon": "چندضلعی بسته",
         "kmlcoords": "مختصات KML",
-        "kmlpaste": "مختصات KML را در این قسمت قرار دهید.",
+        "kmlpaste": "مختصات KML را در این قسمت وارد کنید.",
         "latitude": "عرض جغرافیایی (° x.y)",
         "longitude": "طول جغرافیایی (° x.y)",
         "points": "نقاط",
@@ -257,12 +258,13 @@
         "en": "انگلیسی",
         "es": "اسپانیایی",
         "fa": "فارسی ",
+        "fi": "فنلاندی",
         "fr": "فرانسوی",
         "he": "عبری",
         "hi": "هندی",
         "it": "ایتالیایی",
         "km": "خمری",
-        "lo": "لائوسی",
+        "lo": "لائو",
         "nl": "هلندی",
         "no": "نروژی",
         "ro": "رومانیایی",
@@ -328,14 +330,16 @@
         "http401": "مشکل احراز هویت با سرور.",
         "http403": " ارسال داده به این سرور مجاز نیست.",
         "http404": "سرویس ارسال داده روی سرور یافت نشد.",
+        "http408": "سرور در زمان مناسب پاسخگو نبود.",
         "http413": "داده بیش از حد بزرگ است.",
         "http4xx": "خطای ناشناخته‌ای هنگام ارسال داده به سرور رخ داد.",
-        "http500": "سرور داده‌ها برای فرم شما یا سرور Enketo از کار افتاده است. لطفاً دوباره تلاش کنید یا با __supportEmail__ تماس بگیرید."
+        "http500": "سرور داده‌ها برای فرم شما یا سرور Enketo از کار افتاده است. لطفاً دوباره تلاش کنید یا با __supportEmail__ تماس بگیرید.",
+        "http504": "ارتباط با سرور برقرار نشد."
     },
     "version": "نگارش:",
     "widget": {
         "comment": {
-            "update": "بروز‌ رسانی"
+            "update": "به روز‌ رسانی"
         }
     }
 }
