changed: updated Czech, Slovak, German and Swahili translations

--- a/locales/cs/translation.json
+++ b/locales/cs/translation.json
@@ -258,6 +258,7 @@
         "en": "Angličtina",
         "es": "Španělština",
         "fa": "Perština",
+        "fi": "Finština",
         "fr": "Francouzština",
         "he": "Hebrejština",
         "hi": "Hindština",
