--- a/locales/de/translation.json
+++ b/locales/de/translation.json
@@ -258,6 +258,7 @@
         "en": "Englisch",
         "es": "Spanisch",
         "fa": "Persisch",
+        "fi": "Finnisch",
         "fr": "Französisch",
         "he": "Hebräisch",
         "hi": "Indisch",
@@ -329,7 +330,7 @@
         "http401": "Authentifizierung Problem mit Datenserver.",
         "http403": "Nicht erlaubt Daten zu diesem Datenserver zu übermitteln.",
         "http404": "Sende-Service wurde auf dem Datenserver nicht gefunden.",
-        "http408": "Data server timed out.",
+        "http408": "Datenserver Verbindung nach Wartezeit abgebrochen.",
         "http413": "Datenmenge ist zu groß.",
         "http4xx": "Unbekanntes Sendeproblem auf Datenserver.",
         "http500": "Der Datenserver für das Formular oder der Enketo Server sind ausgefallen. Bitte versuchen Sie es später noch einmal oder kontaktieren __supportEmail__",
