--- a/locales/sk/translation.json
+++ b/locales/sk/translation.json
@@ -258,6 +258,7 @@
         "en": "Angličtina",
         "es": "Španielčina",
         "fa": "Perzština",
+        "fi": "Fínčina",
         "fr": "Francúzština",
         "he": "Hebrejčina",
         "hi": "Hindčina",
