added: if question with open query is emptied by relevant, add audit log, https://github.com/kobotoolbox/enketo-express/issues/591
added: initial functionality to automatically add dn audit when form is loaded with a value for an irrelevant field, https://github.com/kobotoolbox/enketo-express/issues/598

--- a/locales/en/translation-additions.json
+++ b/locales/en/translation-additions.json
@@ -6,7 +6,9 @@
             "emptyHistoryText": "No History",
             "historyText": "History",
             "notifyText": "Email?",
-            "me": "Me"
+            "me": "Me",
+            "containsdatahidden": "This field contains data but is currently hidden from view",
+            "autoclosed": "Query closed by system because this item was hidden"
         }
     },
     "fieldsubmission": {
