added: generate a dn audit log if the value of the linked question changes and is valid, closes https://github.com/kobotoolbox/enketo-express/issues/581
changed: various issues with automatic query generation for relevant/irrelevant changes to the linked question

--- a/locales/en/translation-additions.json
+++ b/locales/en/translation-additions.json
@@ -8,7 +8,8 @@
             "notifyText": "Email?",
             "me": "Me",
             "containsdatahidden": "This field contains data but is currently hidden from view",
-            "autoclosed": "Query closed by system because this item was hidden"
+            "autoclosed": "Query closed by system because this item was hidden",
+            "valuechange": "Value changed from __previous__ to __new__"
         }
     },
     "fieldsubmission": {
