changed: show fieldsubmission feedback above buttons on every page changed: show close button on every page changed: show error message instead of submission feedback if form has error

--- a/locales/en/translation-additions.json
+++ b/locales/en/translation-additions.json
@@ -37,8 +37,9 @@
         },
         "feedback": {
             "ongoing": "Saving...",
-            "success": "All valid changes saved.",
-            "error": "Failed to save changes."
+            "success": "All changes saved.",
+            "fail": "Failed to save changes.",
+            "error": "Some of your changes could not be saved. Please correct all errors."
         }
     }
 }
