--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -8,13 +8,7 @@
         "msg": "To add this form to your Home screen, click the browser settings icon __image1__ and select: 'Add to Home screen'."
       },
       "androidfirefox": {
-        "msg": [
-          "To add this form to your Homescreen:",
-          "1. Add this page to your Firefox bookmarks by clicking the settings icon __image1__ and then the star icon __image2__.",
-          "2. Open your bookmarks by opening a new page and clicking the Bookmarks tab.",
-          "3. Click-and-hold your form until a pop-up menu appears.",
-          "4. Select 'Add to Home Screen'."
-        ]
+        "msg": "To add this form to your Homescreen, long-press the address bar and select 'Add to Home Screen'."
       },
       "heading": "Add to Home Screen",
       "iossafari": {
