added: automated query when field becomes invalid fixed: regressions due to fs-around-validation change

--- a/locales/en/translation-additions.json
+++ b/locales/en/translation-additions.json
@@ -9,7 +9,8 @@
             "me": "Me",
             "containsdatahidden": "This field contains data but is currently hidden from view",
             "autoclosed": "Query closed by system because this item was hidden",
-            "valuechange": "Value changed from __previous__ to __new__"
+            "valuechange": "Value changed from __previous__ to __new__",
+            "becameinvalid": "Value became invalid"
         }
     },
     "fieldsubmission": {
