--- a/locales/en/translation-additions.json
+++ b/locales/en/translation-additions.json
@@ -48,8 +48,7 @@
         "feedback": {
             "ongoing": "Saving...",
             "success": "All changes saved.",
-            "fail": "Failed to save changes.",
-            "error": "Some of your changes could not be saved. Please correct all errors."
+            "fail": "Failed to save changes."
         }
     }
 }
